# giftaku-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  flake.nix  todo.md
migrations/: IDENTITY  LOG
src/: main.rs
src/routes/: authentication.rs  gets.rs  mod.rs  posts.rs
static/: hello.md  index.html
static/css/: styles.css
static/js/: index.js
static/login/: index.html  login.css
static/register/: index.html
