[package]
name = "giftaku_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#graphul = { version = "1.0.1"}
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
rand = "0.8.5"
#base64 = "0.21.4"
once_cell = "1.18.0"
#image = "0.24.7"
#mime = "0.3.17"
#futures-util = "0.3.28"
#uuid = { version = "1.4.1", features = ["fast-rng", "v4"] }